--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -59,7 +59,8 @@
       "the 1979 Toronto Blue Jays#pluralPronouns#",
       "McGruff the Crime Dog#malePronouns#",
       "Jackal Onassis#pluralPronouns#",
-      "a goldfish"
+      "a goldfish#neutralPronouns#",
+      "Atlee Hammaker#malePronouns#"
   ],
   "pros": [
       "The DCI",
