--- a/src/data/grammar/headlines/components/terminating-wordlists.yaml
+++ b/src/data/grammar/headlines/components/terminating-wordlists.yaml
@@ -3,6 +3,9 @@
   "winWord": [
       "wins","triumphs","victorious","crushes","dominates","wins big"
   ],
+  "tournamentWonWord": [
+    "won", "clinched", "taken down", "dominated", "swept"
+  ],
   "mtgOpinionSuggestion": ["banning", "improving", "reconsidering", "nerfing", "bolstering", "strengthening", "weakening", "questioning", "ignoring", "disregarding", "doubling-down on", "reevaluating", "reconceptualizing"],
   "descriptor": [
       "more powerful",
