--- a/src/data/grammar/vocab/bodyparts.yaml
+++ b/src/data/grammar/vocab/bodyparts.yaml
@@ -86,6 +86,52 @@
     "tongue"
   ],
 
+  "bodypartsPlural": [
+    "eyes",
+    "heads",
+    "noses",
+    "ears",
+    "mouths",
+    "necks",
+    "shoulders",
+    "arms",
+    "hands",
+    "stomachs",
+    "legs",
+    "knees",
+    "feet",
+    "toes",
+    "guts",
+    "bellies",
+    "hair",
+    "throats",
+    "teeth",
+    "eyeballs",
+    "skulls",
+    "moustaches",
+    "fingernails",
+    "toenails",
+    "elbows",
+    "spines",
+    "brains",
+    "skeletons",
+    "pinkie toes",
+    "thumbs",
+    "shins",
+    "bellybuttons",
+    "fangs",
+    "claws",
+    "feathers",
+    "kidneys",
+    "spleens",
+    "lips",
+    "foreheads",
+    "pelvises",
+    "sternums",
+    "eyebrows",
+    "tongues"
+  ],
+
   "bodypartsInternal": [
     "heart[_isAre:is]",
     "eyes[_isAre:are]",
