--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -192,12 +192,12 @@ tournamentNews:
 - "[winner:#pro#,#deck#]#winner# #winWord# [where:at #tournament#,in #city#]#where#"
 - 'Pro Tour #teaserCardSet# will be in #city#'
 - '#pro#, after winning #event# with #deckVariation#: [_comment:It''s #deckDescription#.,#magicCatchphrase#]"#_comment#"'
-- "[_rule:SHOCKER!,BREAKING#colon#,TOURNAMENT UPDATE#colon#,,,,]#_rule# #pro# [_rule:has been DQ'd from,has been suspended from,has been disqualified from,sparks controversy at]#_rule# #event# for #disqualifyingAction#"
+- "[_rule:SHOCKER!,BREAKING#colon#,TOURNAMENT UPDATE#colon#,,,,]#_rule# #pro# [_rule:has been DQ'd from,has been suspended from,has been disqualified from,ejected from]#_rule# #event# for #disqualifyingAction#"
 - "Match highlight: #pro# [_defeats:edges out,beats,defeats,routs]#_defeats# #pro# with #randomAnyCard# in round #count# to [_getAhead:lock up,advance in,take down]#_getAhead# #event#"
 - "#pro# topdecks #randomAnyCard# to #verbDefeat# [_opponent:#pro#,#person#]#_opponent#[_when:, in the finals, for the win, and win it all]#_when# #atTournamentInCity#"
 
 teamTournamentNews:
-- '[_series:Team Series,#format# team trios]#_series# #tournamentWonWord# by Team #team# #atTournamentInCity#'
+# - '[_series:Team Series,#format# team trios]#_series# #tournamentWonWord# by Team #team# #atTournamentInCity#'
 - "BREAKING#colon# Team #team# disqualified from #tournament# for #teamDisqualifyingAction#"
 
 tshirtPhrase:
@@ -212,18 +212,27 @@ tshirtPhrase:
 - "I'm drafting #cardCategoryClassTerm#"
 
 teamDisqualifyingAction:
-- '[#pluralPronouns#][_swapping:swapping,changing]#_swapping# outfits with each other between every round'
-- '[#pluralPronouns#]insisting on being [_called:called,referred to as,addressed as]#_called# "The #adj.capitalizeAll# #creatureTypeOrCharacterClass.capitalizeAll.s#"'
-- '[#pluralPronouns#]communicating through an elaborate system of clicks and whistles'
-- '[#pluralPronouns#][_singularNoun:#singularNoun#]wearing [_matching:matching,custom,hand-made]#_matching# t-shirts that say "#tshirtPhrase.capitalizeAll#"'
+- '[_swapping:swapping,changing]#_swapping# outfits with each other between every round'
+- 'insisting on being [_called:called,referred to as,addressed as]#_called# "The #adj.capitalizeAll# #creatureTypeOrCharacterClass.capitalizeAll.s#"'
+- 'communicating through an elaborate system of clicks and whistles'
+- '[_singularNoun:#singularNoun#]wearing [_matching:matching,custom,hand-made]#_matching# t-shirts that say "#tshirtPhrase.capitalizeAll#"'
 - '[#pluralPronouns#]#disqualifyingAction#'
+- 'acutally being just [_what:one person in a very large costume,nine kids in three adult-sized suites,one person who kept changing hats]#_what#'
+- fighting over who gets the middle seat
+- "scouting [_what:opponents' decklists,opponents' sideboards,opponents' #gameAccessory.s#,potential dinner dates,for their new modeling agency,for their farm league team,the judge's amazon wishlists]#_what#"
+- sitting on each other's laps
+- continuing to play as if they are town
+- insisting that they're playing emperor
+- forming a Super PAC
+- attempting to regrow heads for R apiece
+- using fake moustaches to register twice and get better pairings
 
 magicCatchphrase:
 - Now THAT'S what I call Magic!
 - I'm going ham
 - I'M the beatdown
 - Cheese it—the cops!
-- Pip-pip, looks like rain
+- Tut-tut, it looks like rain
 - "[_who:Mama,Papa,Daddy]#_who# needs a new pair of [_what:shoes,shoes,#bodypartsPlural#]#_what#!"
 - "#massNoun# on a stick"
 
@@ -247,7 +256,7 @@ magicSlangTerm:
 - EOTFOFYL
 - Cap'n Tickles
 - Jacetice League
-
+- CAW
 
 disqualifyingAction:
 - "[_reading:reading every card's,repeatedly reading #randomRealCard#'s]#_reading# flavor text out loud"
@@ -265,20 +274,56 @@ disqualifyingAction:
 - failing to file a tax return
 - abusing the hospitality of the judging staff
 - "peeking at #their# opponents' cards with [_what:a telescoping mirror,a tiny camera hidden in #their# #bodypart#,a surveillance monkey,a giant novelty magifying glass]#_what#"
-- "impersonating a #creatureTypeOrCharacterClass#[_how:, without a permit, badly, in poor taste, despite repeated warnings]#_how#"
+- "impersonating #creatureTypeOrCharacterClass.a#[_how:, without a permit, badly, in poor taste, despite repeated warnings]#_how#"
 - "[_adding:adding,adding #count#,playing]#_adding# [_extra:extra,unregistered]#_extra# copies of #randomAnyCard# to #their# [_where:deck,card pool,#deck# deck]#_where#"
 - "using [_counterfeit:a counterfeit #gameAccessory#,counterfeit #gameAccessory.s#,counterfeit copies of #randomAnyCard#]#_counterfeit#"
 - "carrying a concealed #itemNoun# into the tournament venue"
-- "#verbIntransitiveGerund# like a #creatureTypeOrCharacterClass#"
+- "#verbIntransitiveGerund# like #creatureTypeOrCharacterClass.a#"
 - 'repeatedly saying "still had all these" [_circumstance:and revealing #count# copies of #randomRealCard# after every match,to the judges,to everybody within earshot,during the lunch break,and revealing #their# #bodypartsInPairs# after every match]#_circumstance#'
 - "attempting to bribe [_who:a judge,#their# opponent,#person#]#_who# with [_what:a single copy of #randomAnyCard#,#adj.a# #itemNoun#,#largeAmount.a# of #massNoun#]#_what#"
 - "insisting that #randomAnyCard# is playable in #format#"
 - conduct unbecoming an officer and a gentleman
 - unspecified rudeness
 - "#verbStrictlyIntransitiveGerund# in clear violation of the tournament guidelines"
-- "registering a [_count:#num1-9#,#num1-99#,#num1-999#]#_count#-card deck and a #_count#-card sideboard"
+- "registering a [_count:#num1-9#,#num1-99#,#num1-999#]#_count#-card deck and #_count.a#-card sideboard"
 - inciting a very small riot
 - attempting to organize a tontine
+- 'playing "got your nose" with #their# opponent'
+- "killing a [_what:goat,#creatureTypes#]#_what# to read its entrails"
+- "not using #their# indoor voice"
+- shuffling wrong
+- burning popcorn in the venue microwave
+- not having Book Burning
+- harassing the local wildlife
+- "[_standup:standup of #historicalFigure#,#character# standup]propositioning a cardboard #_standup#"
+- "[_proTheir:#their#][_personality:#historicalFigure#,#character#]Refusing to break character from #_proTheir# cosplay of #_personality#"
+- "[_adjective:,excessive ,inappropriate ,unenthusiastic ][_activity:crunking,swooping,icing,roughing of the passer,use of jazz hands,rushing]#_adjective# #_activity#"
+- "using mismatched [_art:basics,art,art for #their# playset of #randomRealCard.s#]#_art#"
+- not appreciating the value of friendship
+- "[_dunker:small child,Level 1 judge,netdecker,everyone in the venue]getting dunked on[_how:, excessively, every round,by a #dunker#]#_how#"
+- telling sweet little lies
+- "leaving #their# turn signal on for far too long"
+- "taping without the express written permission of [_organization:the NFL,the DCI]#_organization#"
+- "releasing #animalGroup.a# into the tournament venue"
+- "tapping #their# cards [_how:counterclockwise,360 degrees,with a pair of chopsticks,using only #their# #bodyPart#]#_how#"
+- "[_mocking:mocking,ridiculing,making fun of,making light of]#_mocking# the magic storyline"
+- "throwing [_what:cards,#their# deck,#their# sideboard,#gameAccessory.a#, unsleeved copies of #randomReadCard#]#_what# across the table and shouting at #their# opponents"
+- ugly sleeves
+- continuing to play as if they are town
+- "offering to determine the match outcome via [_method:arm wrestling,thumb wrestling,a riddling contest,a staring contest,a hands-against-a-hard-body contest]#_method#"
+- trying to make fetch happen
+- not waiting for Floral Spuzzem to decide which artifact to destroy
+- attempting to draw the game with Fatespinner
+- attempting to file for compensation
+- improper handling of silverware
+- blatant product placement[_when:, during feature matches]#_when#
+- convincing #their# opponents to "deck swap"
+- banishing players to the Shadow Realm
+- "flipping the table after every [_what:win,loss,mulligan,deck check]#_what#"
+- flagrantly shotgunning [_what:PBRs,Mountain Dew,decaf coffee,Kombucha,Red Bull and zinfandel,motor oil,Easy Cheese,health juice,off-brand cola,Cool Whip,fancy mustards,barbeque sauce,cologne testers]#_what# between rounds
+- "[_emoting:enthusiastically pantomiming,physically acting out,creatively narrating]#_emoting# each of #their# spells"
+- "#crime#"
+- "#crime#"
 
 tipStrategy:
 - 'The Case for #mtgOpinionSuggestion.capitalizeAll# [_bannedThing:#randomAnyCard#,#gameConcept#]#_bannedThing.capitalizeAll#[_where:
