one-word-name cardsearch; more vocab; cleanup and fixes

--- a/src/data/grammar/headlines/mtg-card-of-the-day.yaml
+++ b/src/data/grammar/headlines/mtg-card-of-the-day.yaml
@@ -346,7 +346,7 @@ historicalFigure:
   - Alexander the Great[_their:his]
   - Julius Caesar[_their:his]
   - Henry VIII[_their:his]
-  - Bonny and Clyde[_their:their]
+  - Bonnie and Clyde[_their:their]
   - Ivan the Terrible[_their:his]
   - Simón Bolívar[_their:his]
   - Marie Antoinette[_their:her]
