--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -84,6 +84,57 @@
     "#planeswalkerFirstName#",
     "#commonCharacterFirstName#"
   ],
+
+  "characterMonosyllabic": [
+    "Braids",
+    "Bosh",
+    "Dack",
+    "Fblthp",
+    "Greel",
+    "Hans",
+    "Jace",
+    "Karn",
+    "Koth",
+    "Norn",
+    "Squee",
+    "Sram",
+    "Stangg",
+    "Sygg",
+    "Teeg",
+    "Thrag",
+    "Thrun",
+    "Yawg",
+    "Zur"
+  ],
+
+  "characterDisyllabic": [
+    "Balthor",
+    "Baral",
+    "Chandler",
+    "Doran",
+    "Feldon",
+    "Geralf",
+    "Gonti",
+    "Grisel",
+    "Jaya",
+    "Joven",
+    "Jushi",
+    "Kiki",
+    "Krenko",
+    "Kresh",
+    "Mirri",
+    "Momir",
+    "Norin",
+    "Odric",
+    "Omnath",
+    "Rakdos",
+    "Talrand",
+    "Thassa",
+    "Ugin",
+    "Urza",
+    "Venser"
+  ],
+
   "commonCharacterFirstName": [
   	"Agathe",
   	"Borzard",
