--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -177,7 +177,7 @@ tournamentNews:
 - '#pro#, after winning #event# with #deckVariation#: [_comment:It''s #deckDescription#.,#mtgCatchphrase.capitalize#]"#_comment#"'
 - "[_rule:SHOCKER!,BREAKING#colon#,TOURNAMENT UPDATE#colon#,,,,]#_rule# #pro# [_rule:has been DQ'd from,has been suspended from,has been disqualified from,ejected from]#_rule# #event# for #disqualifyingAction#"
 - "Match highlight: #pro# [_defeats:edges out,beats,defeats,routs]#_defeats# #pro# with #randomAnyCard# in round #count# to [_getAhead:lock up,advance in,take down]#_getAhead# #event#"
-- "#pro# topdecks #randomAnyCard# to #verbDefeat# [_opponent:#pro#,#person#]#_opponent#[_when:, in the finals, for the win, and win it all]#_when# #atTournamentInCity#"
+- "#pro# topdecks #randomAnyCard# to #verbDefeat# [_opponent:#pro#,#person#]#_opponent#[_when:,, in the finals, and win it all]#_when# #atTournamentInCity#"
 
 teamTournamentNews:
 - '[_series:Team Series,#format# team trios]#_series# #tournamentWonWord# by Team #team# #atTournamentInCity#'
@@ -241,7 +241,7 @@ playguide:
 - "#recentCardSet# #format# Set Review: [_cat:#basicColors#,#cardCategory.s# and #cardCategory.s#]#_cat.capitalizeAll#"
 
 tournamentRound:
-- "[_tournament:#tournament##colon# ,]#_tournament.capitalize#[_round:Round #num2-9#,Quarterfinals,Semifinals,Finals]#_round#
+- "[_tournament:#tournament.capitalize# ,]#_tournament#[_round:Round #num2-9#,Quarterfinals,Semifinals,Finals]#_round#
   Feature Match"
 - Grudge Match
 - "#format# Super League [_round:Quarterfinals,Semifinals,Finals]#_round#"
