--- a/src/data/grammar/mtg/community/tournament-hijinks.yaml
+++ b/src/data/grammar/mtg/community/tournament-hijinks.yaml
@@ -15,11 +15,11 @@ disqualifyingAction:
 - abusing the hospitality of the judging staff
 - "peeking at #their# opponents' cards with [_what:a telescoping mirror,a tiny camera hidden in #their# #bodypart#,a surveillance monkey,a giant novelty magifying glass]#_what#"
 - "impersonating #creatureTypeOrCharacterClass.a#[_how:, without a permit, badly, in poor taste, despite repeated warnings]#_how#"
-- "[_adding:adding,adding #count#,playing]#_adding# [_extra:extra,unregistered]#_extra# copies of #randomAnyCard# to #their# [_where:deck,card pool,#deck# deck]#_where#"
+- "[_adding:adding,adding #count#]#_adding# [_extra:extra,unregistered]#_extra# copies of #randomAnyCard# to #their# [_where:deck,card pool,#deck# deck]#_where#"
 - "using [_counterfeit:a counterfeit #gameAccessory#,counterfeit #gameAccessory.s#,counterfeit copies of #randomAnyCard#]#_counterfeit#"
 - "carrying a concealed #itemNoun# into the tournament venue"
 - "#verbIntransitiveGerund# like #creatureTypeOrCharacterClass.a#"
-- 'repeatedly saying "still had all these" [_circumstance:and revealing #count# copies of #randomRealCard# after every match,to the judges,to everybody within earshot,during the lunch break,and revealing #their# #bodypartsInPairs# after every match]#_circumstance#'
+- '[_saying:saying,shouting,screaming,muttering,whispering]repeatedly #_saying# "mtgCatchphrase.capitalize" [_circumstance:and revealing #count# copies of #randomRealCard# after every match,to the judges,to everybody within earshot,during the lunch break,and revealing #their# #bodypartsInPairs# after every match]#_circumstance#'
 - "attempting to bribe [_who:a judge,#their# opponent,#person#]#_who# with [_what:a single copy of #randomAnyCard#,#adj.a# #itemNoun#,#largeAmount.a# of #massNoun#]#_what#"
 - "insisting that #randomAnyCard# is playable in #format#"
 - conduct unbecoming an officer and a gentleman
@@ -36,11 +36,10 @@ disqualifyingAction:
 - not having Book Burning
 - harassing the local wildlife
 - "[_standup:standup of #historicalFigure#,#character# standup]propositioning a cardboard #_standup#"
-- "[_proTheir:#their#][_personality:#historicalFigure#,#character#]Refusing to break character from #_proTheir# cosplay of #_personality#"
+- "[_proTheir:#their#][_personality:#historicalFigure#,#character#]refusing to break character from #_proTheir# cosplay of #_personality#"
 - "[_adjective:,excessive ,inappropriate ,unenthusiastic ][_activity:crunking,swooping,icing,roughing of the passer,use of jazz hands,rushing]#_adjective# #_activity#"
 - "using mismatched [_art:basics,art,art for #their# playset of #randomRealCard.s#]#_art#"
 - not appreciating the value of friendship
-- "[_dunker:small child,Level 1 judge,netdecker,everyone in the venue]getting dunked on[_how:, excessively, every round,by a #dunker#]#_how#"
 - telling sweet little lies
 - "leaving #their# turn signal on for far too long"
 - "taping without the express written permission of [_organization:the NFL,the DCI]#_organization#"
@@ -56,11 +55,11 @@ disqualifyingAction:
 - attempting to draw the game with Fatespinner
 - attempting to file for compensation
 - improper handling of silverware
-- blatant product placement[_when:, during feature matches]#_when#
+- "blatant product placement[_when:, during a feature match, on #their# deck registration sheet]#_when#"
 - convincing #their# opponents to "deck swap"
 - banishing players to the Shadow Realm
 - "flipping the table after every [_what:win,loss,mulligan,deck check]#_what#"
-- flagrantly shotgunning [_what:PBRs,Mountain Dew,decaf coffee,Kombucha,Red Bull and zinfandel,motor oil,Easy Cheese,health juice,off-brand cola,Cool Whip,fancy mustards,barbeque sauce,cologne testers]#_what# between rounds
+- flagrantly shotgunning [_what:PBRs,Mountain Dew,decaf coffee,La Croix,kombucha,Red Bull and zinfandel,motor oil,Easy Cheese,health juice,off-brand cola,Cool Whip,fancy mustards,barbeque sauce,cologne testers]#_what# between rounds
 - "[_emoting:enthusiastically pantomiming,physically acting out,creatively narrating]#_emoting# each of #their# spells"
 - "#crime#"
 - "#crime#"
@@ -82,8 +81,8 @@ teamDisqualifyingAction:
 - using fake moustaches to register twice and get better pairings
 
 tshirtPhrase:
-- "[_noun1:#noun#][_noun2:#noun#]#_noun1# #_noun2#"
-- "[_noun1:#singularNoun#][_noun2:#singularNoun#]#_noun1# #_noun2#"
+- "#singularNoun# #noun#"
+- "[_noun1:#singularNoun#][_noun2:#singularNoun#,#singularNoun#,#singularNoun#,#playerCategory#]#_noun1# #_noun2#"
 - "Not My #creatureTypeOrCharacterClass#"
 - "Show Me The #pluralNounOrMassNoun#"
 - I'm drafting [_what:#deckLimitedArchetype#,#basicColors#,#mtgColors#,#cardCategory.s#,#cardCategoryClassTerm#]#_what#
@@ -91,6 +90,7 @@ tshirtPhrase:
 - "[_personality:#historicalFigure#,#pro#,#character#]I ❤ #_personality#"
 - "[_noun:#abstractNoun#,#singularNoun#,#emotion#]#_noun# #nounVagueConcept#"
 - "I'm drafting #cardCategoryClassTerm#"
+- "[_personality:#historicalFigure#,#character#]I'm with #_personality#"
 
 dumbScenario:
 - attempt to roll back the damage-on-stack rules
