--- a/src/data/grammar/mtg/story/mtg-locations.yaml
+++ b/src/data/grammar/mtg/story/mtg-locations.yaml
@@ -1,5 +1,5 @@
 {
-  "plane": ["Rath", "Shandalar", "Mirrodin", "Kamigawa", "Alara", "Zendikar", "Innistrad", "Kaladesh", "Amonkhet",
+  "plane": ["Rath", "Shandalar", "Mirrodin", "Kamigawa", "Alara", "Zendikar", "Innistrad", "Kaladesh", "Amonkhet", "Ixalan",
             "Muraganda", "Mercadia", "Mirrodin", "Ravnica", "Lorwyn", "Tarkir", "Vryn", "Theros", "Shadowmoor", "Phyrexia"],
   "nonPlaneLocation": [
       "Adarkar",
