--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -12,6 +12,7 @@
       "Freyalise#femalePronouns#",
       "Garruk#malePronouns#",
       "Gideon#malePronouns#",
+      "Huatli#femalePronouns#",
       "Jace#malePronouns#",
       "Jaya#femalePronouns#",
       "Kaervek#malePronouns#",
