--- a/src/data/grammar/mtg/story/mtg-locations.yaml
+++ b/src/data/grammar/mtg/story/mtg-locations.yaml
@@ -153,5 +153,6 @@
       "Vodalian",
       "Wirewood"
   ],
-  "storyLocation": ["#plane#", "#nonPlaneLocation#"]
+  "storyLocation": ["#plane#", "#nonPlaneLocation#"],
+  "nonPlaneStoryLocation": ["#nonPlaneLocation#", "#minorStoryLocation#"]
 }
